--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   rflutter_alert: ^2.0.4
   google_fonts: ^2.3.1
   flutter_dotenv: ^5.0.2
+  flutter_secure_storage: ^5.0.2
 
 dev_dependencies:
   flutter_test:
