--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   rflutter_alert: ^2.0.4
   google_fonts: ^2.3.1
   flutter_dotenv: ^5.0.2
-  flutter_secure_storage: ^5.0.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
