--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^2.3.1
   flutter_dotenv: ^5.0.2
   get_storage: ^2.0.3
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
