--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_dotenv: ^5.0.2
   get_storage: ^2.0.3
   email_validator: ^2.0.1
+  flutter_inappwebview: ^5.3.2
+  flutter_downloader: ^1.7.3
+  permission_handler: ^9.2.0
 
 dev_dependencies:
   flutter_test:
