--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,14 @@ dependencies:
   flutter_downloader: ^1.7.3
   permission_handler: ^9.2.0
   filesystem_picker: ^2.0.0
+  nb_utils: ^4.4.8
+  cached_network_image: ^3.1.0
+  html: ^0.15.0
+  fl_chart: 0.36.1
+  otp_text_field: ^1.1.1
+  dots_indicator: ^2.0.0
+  shimmer: ^2.0.0
+  url_launcher: ^6.0.10
 
 
 dev_dependencies:
@@ -96,4 +104,5 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - .env
+    - assets/
     - assets/img/profile-picture.png
