--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
         android:requestLegacyExternalStorage="true"
         android:label="mosaic"
         android:name="${applicationName}"
+        android:usesCleartextTraffic="true"
+        android:showWhenLocked="true"
+    	android:turnScreenOn="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
