--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   flutter_downloader: ^1.7.3
   permission_handler: ^9.2.0
   filesystem_picker: ^2.0.0
+  flutter_local_notifications: ^9.4.0
+  firebase_messaging: ^11.2.13
+  firebase_core: ^1.14.1
 
 
 dev_dependencies:
